WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272570
[IFC] Do not invalidate LineLayout on style change unless it is completely stale
https://bugs.webkit.org/show_bug.cgi?id=272570
Summary
[IFC] Do not invalidate LineLayout on style change unless it is completely stale
alan
Reported
2024-04-11 20:39:00 PDT
ssia
Attachments
Patch
(6.48 KB, patch)
2024-04-11 21:07 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.49 KB, patch)
2024-04-12 06:19 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.50 KB, patch)
2024-04-12 11:00 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.26 KB, patch)
2024-04-12 11:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(17.02 KB, patch)
2024-04-12 19:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.87 KB, patch)
2024-04-13 21:07 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch with dependencies
(18.06 KB, patch)
2024-04-13 21:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch with dependencies
(18.06 KB, patch)
2024-04-14 08:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(20.82 KB, patch)
2024-04-14 14:42 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.69 KB, patch)
2024-04-16 19:14 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.87 KB, patch)
2024-04-17 20:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.97 KB, patch)
2024-04-20 12:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.97 KB, patch)
2024-04-21 05:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(12)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-04-11 21:07:20 PDT
Created
attachment 470881
[details]
Patch
alan
Comment 2
2024-04-12 06:19:40 PDT
Created
attachment 470892
[details]
Patch
alan
Comment 3
2024-04-12 11:00:39 PDT
Created
attachment 470900
[details]
Patch
alan
Comment 4
2024-04-12 11:37:36 PDT
Created
attachment 470901
[details]
Patch
alan
Comment 5
2024-04-12 19:22:04 PDT
Created
attachment 470909
[details]
Patch
alan
Comment 6
2024-04-13 21:07:27 PDT
Created
attachment 470917
[details]
Patch
alan
Comment 7
2024-04-13 21:08:35 PDT
Created
attachment 470918
[details]
Patch with dependencies
alan
Comment 8
2024-04-14 08:49:27 PDT
Created
attachment 470920
[details]
Patch with dependencies
alan
Comment 9
2024-04-14 14:42:07 PDT
Created
attachment 470921
[details]
Patch
alan
Comment 10
2024-04-16 19:14:41 PDT
Created
attachment 470950
[details]
Patch
alan
Comment 11
2024-04-17 20:47:10 PDT
Created
attachment 470981
[details]
[fast-cq]Patch
EWS
Comment 12
2024-04-18 07:25:32 PDT
Committed
277669@main
(7f4f0e349bf4): <
https://commits.webkit.org/277669@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470981
[details]
.
Radar WebKit Bug Importer
Comment 13
2024-04-18 07:26:16 PDT
<
rdar://problem/126688746
>
WebKit Commit Bot
Comment 14
2024-04-19 08:44:21 PDT
Re-opened since this is blocked by
bug 272988
alan
Comment 15
2024-04-20 12:49:55 PDT
Created
attachment 471024
[details]
Patch
alan
Comment 16
2024-04-21 05:36:55 PDT
Created
attachment 471029
[details]
[fast-cq]Patch
EWS
Comment 17
2024-04-22 06:40:49 PDT
Committed
277811@main
(7a4c98d36d1c): <
https://commits.webkit.org/277811@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471029
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug