[IFC] Do not invalidate LineLayout on style change unless it completely stale https://bugs.webkit.org/show_bug.cgi?id=272570

Reviewed by Antti Koivisto.

Instead of deleting the LineLayout object on style change, let's just invalidate the (inline item) cache when needed.

* LayoutTests/fast/repaint/focus-ring-repaint-expected.txt:
* LayoutTests/fast/repaint/leftover-after-shrinking-content-expected.txt:
* LayoutTests/fast/repaint/overlapping-lines-with-ink-overflow-expected.txt:
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineDamage.h:
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::styleWillChange):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::layout):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::styleDidChange):
* Source/WebCore/rendering/RenderInline.cpp:
(WebCore::RenderInline::styleDidChange):

Canonical link: https://commits.webkit.org/277669@main